--- a/index.html
+++ b/index.html
@@ -29,8 +29,59 @@
     />
     <!--========== JavaScript ==========-->
     <script defer type="module" src="./src/js/main.js"></script>
-    <title>Nothing</title>
+    <title>NOTHING</title>
   </head>
 
-  <body></body>
+  <body>
+    <!--========== Header ==========-->
+    <header class="header" id="header">
+      <nav class="nav">
+        <!-- Logo -->
+        <a href="#" class="nav__logo">
+          <div class="nav__logo-text">NOTHING</div>
+        </a>
+
+        <!-- Nav-menu -->
+        <div class="nav__shadow"></div>
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#" class="nav__link">HOME</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">ear (1)</a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="nav__link">ABOUT US</a>
+            </li>
+          </ul>
+          <div class="nav__close">
+            <i class="bx bx-x"></i>
+          </div>
+        </div>
+
+        <!-- Nav-Button -->
+        <div class="nav__btns">
+          <div class="nav__icon" id="nav-cart">
+            <i class="bx bx-cart"></i>
+          </div>
+          <div class="nav__icon" id="nav-toggle">
+            <i class="bx bx-menu"></i>
+          </div>
+        </div>
+      </nav>
+    </header>
+
+    <!--========== Main ==========-->
+    <main class="main">
+      <!-- home -->
+      <section class="home" id="home">
+        <div class="home__container">
+          <div class="home__content">
+            <!--  -->
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
