mobile view - home done

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <a href="#" class="nav__link">HOME</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">ear (1)</a>
+              <a href="#" class="nav__link">ear<span>(1)</span></a>
             </li>
             <li class="nav__item">
               <a href="#" class="nav__link">ABOUT US</a>
@@ -78,10 +78,44 @@
       <section class="home" id="home">
         <div class="home__container">
           <div class="home__content">
-            <!--  -->
+            <h1 class="home__title">NOTHING</h1>
+            <div class="home__image-container">
+              <img
+                class="home__image"
+                src="./static/images/ear-1-home.png"
+                alt=""
+              />
+            </div>
+
+            <h1 class="home__title">
+              EAR(1)
+              <div class="home__dot"></div>
+            </h1>
+          </div>
+        </div>
+      </section>
+
+      <!-- Product -->
+      <section class="ear__one" id="ear__one">
+        <div class="ear__container">
+          <div class="ear__text-animation">
+            <div>
+              -ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)
+            </div>
+            <div>
+              -ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)
+            </di>
+          </div>
+          <div class="ear__video"></div>
+          <div class="ear__content">
+            <div class="ear__title">dasg</div>
+            <div class="ear__paragraph"></div>
           </div>
         </div>
       </section>
     </main>
+
+    <!--========== Footer ==========-->
+    <footer></footer>
   </body>
 </html>
