mobile view - infinite marquee

--- a/index.html
+++ b/index.html
@@ -87,10 +87,7 @@
               />
             </div>
 
-            <h1 class="home__title">
-              EAR(1)
-              <div class="home__dot"></div>
-            </h1>
+            <h1 class="home__title home__dot">EAR(1)</h1>
           </div>
         </div>
       </section>
@@ -98,17 +95,27 @@
       <!-- Product -->
       <section class="ear__one" id="ear__one">
         <div class="ear__container">
-          <div class="ear__text-animation">
-            <div>
-              -ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)
+          <div class="marquee">
+            <div class="marquee-inner" id="marquee-1">
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
             </div>
-            <div>
-              -ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)-ear (1)
-            </di>
+            <div class="marquee-inner" id="marquee-2">
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+              <div class="marquee-text">ear (1)</div>
+            </div>
           </div>
           <div class="ear__video"></div>
           <div class="ear__content">
-            <div class="ear__title">dasg</div>
+            <div class="ear__title"></div>
             <div class="ear__paragraph"></div>
           </div>
         </div>
