mobile view - ear(1) product

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       <!-- Product -->
       <section class="ear__one" id="ear__one">
         <div class="ear__container">
+          <!-- marquee -->
           <div class="marquee">
             <div class="marquee-inner" id="marquee-1">
               <div class="marquee-text">ear (1)</div>
@@ -113,10 +114,95 @@
               <div class="marquee-text">ear (1)</div>
             </div>
           </div>
-          <div class="ear__video"></div>
+
+          <!-- video -->
+          <div class="video__container">
+            <iframe
+              width="100%"
+              height="100%"
+              src="https://www.youtube-nocookie.com/embed/ZR7ForzKEHc?autoplay=1&mute=1&controls=0&showinfo=0&loop=1&playlist=ZR7ForzKEHc&playsinline=1"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+
+          <!-- content -->
           <div class="ear__content">
-            <div class="ear__title"></div>
-            <div class="ear__paragraph"></div>
+            <div class="ear__title">ear (1)</div>
+            <div class="ear__subtitle">SOUND OF CHANGE</div>
+            <div class="ear__paragraph">
+              Introducing Nothing ear (1). <br />
+              Raw beauty with precise engineering and state-of-the-art noise
+              cancellation for a pure sound experience.
+            </div>
+            <button class="ear__btn button">Buy now</button>
+          </div>
+          <div class="ear__image-container">
+            <img
+              class="ear__image"
+              src="./static/images/home-two.jpg"
+              alt="earphone"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- ABOUT US -->
+      <section class="about" id="about">
+        <div class="about__container">
+          <!-- marquee -->
+          <div class="marquee">
+            <div class="marquee-inner" id="marquee-1">
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+            </div>
+            <div class="marquee-inner" id="marquee-2">
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+              <div class="marquee-text">ABOUT US</div>
+            </div>
+          </div>
+
+          <!-- video -->
+          <div class="video__container">
+            <iframe
+              width="100%"
+              height="100%"
+              src="https://www.youtube-nocookie.com/embed/W0jOMHaEfzM?autoplay=1&mute=1&controls=0&showinfo=0&loop=1&playlist=W0jOMHaEfzM&playsinline=1"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+          </div>
+
+          <!-- content -->
+          <div class="ear__content">
+            <div class="ear__title">NOTHING</div>
+            <div class="ear__subtitle">ABOUT US</div>
+            <div class="ear__paragraph">
+              It’s easy to make something. Even easier when it’s just like the
+              thing before it. And the one before that. But like all good
+              things, this one starts from scratch. No notes. No blueprints. No
+              map to find our way back.
+            </div>
+            <button class="ear__btn button">Buy now</button>
+          </div>
+          <div class="ear__image-container">
+            <img
+              class="ear__image"
+              src="./static/images/home-one.jpg"
+              alt="earphone"
+            />
           </div>
         </div>
       </section>
