mobile view - about us

--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
           </div>
 
           <!-- content -->
-          <div class="ear__content">
-            <div class="ear__title">ear (1)</div>
-            <div class="ear__subtitle">SOUND OF CHANGE</div>
-            <div class="ear__paragraph">
+          <div class="content">
+            <div class="title">ear (1)</div>
+            <div class="subtitle">SOUND OF CHANGE</div>
+            <div class="paragraph">
               Introducing Nothing ear (1). <br />
               Raw beauty with precise engineering and state-of-the-art noise
               cancellation for a pure sound experience.
             </div>
             <button class="ear__btn button">Buy now</button>
           </div>
-          <div class="ear__image-container">
+          <div class="image__container">
             <img
               class="ear__image"
               src="./static/images/home-two.jpg"
@@ -186,20 +186,20 @@
           </div>
 
           <!-- content -->
-          <div class="ear__content">
-            <div class="ear__title">NOTHING</div>
-            <div class="ear__subtitle">ABOUT US</div>
-            <div class="ear__paragraph">
+          <div class="content">
+            <div class="title">NOTHING</div>
+            <div class="subtitle">ABOUT US</div>
+            <div class="paragraph">
               It’s easy to make something. Even easier when it’s just like the
               thing before it. And the one before that. But like all good
               things, this one starts from scratch. No notes. No blueprints. No
               map to find our way back.
             </div>
-            <button class="ear__btn button">Buy now</button>
+            <button class="about__btn button">Learn More</button>
           </div>
-          <div class="ear__image-container">
+          <div class="image__container">
             <img
-              class="ear__image"
+              class="about__image"
               src="./static/images/home-one.jpg"
               alt="earphone"
             />
