mobile view - footer - accordion menu

--- a/index.html
+++ b/index.html
@@ -209,6 +209,58 @@
     </main>
 
     <!--========== Footer ==========-->
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer__content">
+        <!-- menu -->
+        <ul class="footer__menu">
+          <li class="footer__list footer__list-first">
+            <div class="footer__list-title">
+              <p>Product</p>
+              <i class="bx bx-chevron-down"></i>
+            </div>
+            <div class="footer__items">
+              <a href="#">ear (1)</a>
+            </div>
+          </li>
+          <li class="footer__list">
+            <div class="footer__list-title">
+              <p>Company</p>
+              <i class="bx bx-chevron-down"></i>
+            </div>
+            <div class="footer__items">
+              <a href="#">About us</a>
+            </div>
+          </li>
+          <li class="footer__list">
+            <div class="footer__list-title">
+              <p>Support</p>
+              <i class="bx bx-chevron-down"></i>
+            </div>
+            <div class="footer__items">
+              <a href="#">FAQ</a>
+            </div>
+          </li>
+          <li class="footer__list">
+            <div class="footer__list-title">
+              <p>ear (1) App</p>
+              <i class="bx bx-chevron-down"></i>
+            </div>
+            <div class="footer__items footer__items-app">
+              <a href="#" class="footer__app">Android</a>
+              <a href="#" class="footer__app">iOS</a>
+            </div>
+          </li>
+        </ul>
+
+        <!-- newsletter -->
+
+        <!-- social media -->
+        <!-- payment -->
+        <!-- copyright -->
+        <p class="copyright">
+          &copy; <span class="this-year"></span> Redesigned by Bonwoo Ko.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
