mobile view - media query

--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
                 alt=""
               />
             </div>
-
             <h1 class="home__title home__dot">EAR(1)</h1>
           </div>
         </div>
@@ -129,21 +128,24 @@
 
           <!-- content -->
           <div class="content">
-            <div class="title">ear (1)</div>
-            <div class="subtitle">SOUND OF CHANGE</div>
-            <div class="paragraph">
-              Introducing Nothing ear (1). <br />
-              Raw beauty with precise engineering and state-of-the-art noise
-              cancellation for a pure sound experience.
+            <div class="content__wrap">
+              <div class="title">ear (1)</div>
+              <div class="subtitle">SOUND OF CHANGE</div>
+              <div class="paragraph">
+                Introducing Nothing ear (1). <br />
+                Raw beauty with precise engineering and state-of-the-art noise
+                cancellation for a pure sound experience.
+              </div>
+              <button class="ear__btn button">Buy now</button>
             </div>
-            <button class="ear__btn button">Buy now</button>
-          </div>
-          <div class="image__container">
-            <img
-              class="ear__image"
-              src="./static/images/home-two.jpg"
-              alt="earphone"
-            />
+
+            <div class="image__container">
+              <img
+                class="ear__image"
+                src="./static/images/home-two.jpg"
+                alt="earphone"
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -186,22 +188,24 @@
 
           <!-- content -->
           <div class="content">
-            <div class="title">NOTHING</div>
-            <div class="subtitle">ABOUT US</div>
-            <div class="paragraph">
-              It’s easy to make something. Even easier when it’s just like the
-              thing before it. And the one before that. But like all good
-              things, this one starts from scratch. No notes. No blueprints. No
-              map to find our way back.
+            <div class="content__wrap">
+              <div class="title">NOTHING</div>
+              <div class="subtitle">ABOUT US</div>
+              <div class="paragraph">
+                It’s easy to make something. Even easier when it’s just like the
+                thing before it. And the one before that. But like all good
+                things, this one starts from scratch. No notes. No blueprints.
+                No map to find our way back.
+              </div>
+              <button class="about__btn button">Learn More</button>
             </div>
-            <button class="about__btn button">Learn More</button>
-          </div>
-          <div class="image__container">
-            <img
-              class="about__image"
-              src="./static/images/home-one.jpg"
-              alt="earphone"
-            />
+            <div class="image__container">
+              <img
+                class="about__image"
+                src="./static/images/home-one.jpg"
+                alt="earphone"
+              />
+            </div>
           </div>
         </div>
       </section>
