product page - mobile view - product feature change

--- a/src/pages/ear-one.html
+++ b/src/pages/ear-one.html
@@ -945,38 +945,144 @@
       </section>
 
       <section class="section product__features">
-        <ul class="product__feature-tabs upper-tabs">
-          <li class="product__feature-tab">
-            <a href="#tab=1">Tab 1</a>
-          </li>
-          <li class="product__feature-tab">
-            <a href="#tab=2">Tab 2</a>
-          </li>
-          <li class="product__feature-tab">
-            <a href="#tab=3">Tab 3</a>
-          </li>
-          <li class="product__feature-tab">
-            <a href="#tab=4">Tab 4</a>
-          </li>
-        </ul>
-        <ul class="product__feature-tabs lower-tabs">
-          <li class="product__feature-tab">
-            <a href="#tab=1">Tab 1</a>
-          </li>
-          <li class="product__feature-tab">
-            <a href="#tab=2">Tab 2</a>
-          </li>
-          <li class="product__feature-tab">
-            <a href="#tab=3">Tab 3</a>
-          </li>
-          <li class="product__feature-tab">
-            <a href="#tab=4">Tab 4</a>
-          </li>
-        </ul>
-        <div class="product__feature-tab-content">
-          <div id="tab-1" class="product__feature-tab-text">
-            <!-- content -->
+        <h1 class="product__feature-title">Tech Specs</h1>
+        <!-- accordion -->
+        <div class="product__feature-accordion">
+          <!-- link 1 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">dimensions</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content dimensions__content">
+              <!--  -->
+              <div class="dimensions__wrap">
+                <h3 class="dimensions__title">Ear Bud</h3>
+                <div class="detail-wrap">
+                  <div class="standards">
+                    <p class="standard">Height:</p>
+                    <p class="standard">Width:</p>
+                    <p class="standard">Depth:</p>
+                    <p class="standard">Weight:</p>
+                  </div>
+                  <div class="values">
+                    <p class="value">28,9 MM (1.13 IN)</p>
+                    <p class="value">21,5 MM (0.83 IN)</p>
+                    <p class="value">23,5 MM (0.91 IN)</p>
+                    <p class="value">4,7 GRAMS (0.16 OZ)</p>
+                  </div>
+                </div>
+              </div>
+              <!--  -->
+              <div class="dimensions__image-warp">
+                <img src="../../static/images/dimension-1.png" alt="ear bud" />
+              </div>
+              <!--  -->
+              <div class="dimensions-wrap">
+                <h3 class="dimensions__title">Case</h3>
+                <div class="detail-wrap">
+                  <div class="standards">
+                    <p class="standard">Height:</p>
+                    <p class="standard">Width:</p>
+                    <p class="standard">Depth:</p>
+                    <p class="standard">Weight:</p>
+                  </div>
+                  <div class="values">
+                    <p class="value">58,6 MM (2.30 IN)</p>
+                    <p class="value">58,6 MM (2.30 IN)</p>
+                    <p class="value">23,7 MM (0.93 IN)</p>
+                    <p class="value">57,4 GRAMS (2 OZ)</p>
+                  </div>
+                </div>
+              </div>
+              <!--  -->
+              <div class="dimensions__image-warp">
+                <img src="../../static/images/dimension-2.png" alt="case" />
+              </div>
+              <!--  -->
+            </div>
           </div>
+          <!-- link 2 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">sound</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content sound__content">
+              <p>content</p>
+            </div>
+          </div>
+          <!-- link 3 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">clear voice</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content voice__content">
+              <p>content</p>
+            </div>
+          </div>
+          <!-- link 4 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">battery</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content battery__content">
+              <p>content</p>
+            </div>
+          </div>
+          <!-- link 5 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">customization</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content customization__content">
+              <p>content</p>
+            </div>
+          </div>
+          <!-- link 6 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">features</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content features__content">
+              <p>content</p>
+            </div>
+          </div>
+          <!-- link 7 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">compatibility</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content compatibility__content">
+              <p>content</p>
+            </div>
+          </div>
+          <!-- link 8 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">connectivity</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content connectivity__content">
+              <p>content</p>
+            </div>
+          </div>
+          <!-- link 9 -->
+          <div class="accordion__item">
+            <button class="accordion__link">
+              <h3 class="accordion__link-title">contents of the box</h3>
+              <i class="bx bx-right-arrow-alt feature__accordion-icon"></i>
+            </button>
+            <div class="accordion__content box__content">
+              <p>content</p>
+            </div>
+          </div>
+          <!-- end -->
         </div>
       </section>
     </main>
